# repsim

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml  tests.yml
diagnostics/: benchmark_pca.py  bias_variance.py
docs/reference/geometry/: curvature.py.md  geodesic.py.md  manifold.py.md  optimize.py.md  trig.py.md
docs/reference/kernels/: kernel_base.py.md
examples/: spherical_mds.ipynb
repsim/: __init__.py  compare.py  compare_impl.py  metrics.py  pairwise.py  repsim.py  test_compare.py  test_geometry.py  test_names.py  test_pairwise.py  test_stats.py  types.py  util.py
repsim/draw/: __init__.py
repsim/embedding/: spherical_mds.py
repsim/geometry/: __init__.py  curvature.py  geodesic.py  hypersphere.py  length_space.py  manifold.py  optimize.py  stats.py  test_curvature.py  trig.py
repsim/kernels/: __init__.py  kernel_base.py  kernel_methods.py  length_scale.py  linear.py  radial.py
repsim/metrics/: __init__.py  affine_invariant_riemannian.py  angular_cka.py  generalized_shape_metrics.py  representation_metric_space.py  stress.py
repsim/pairwise/: __init__.py
repsim/slack/: __init__.py
repsim/stats/: __init__.py  manifold_pca.py  spherical_mds.py
src/repsim/: __init__.py  pairwise.py  util.py
src/repsim/geometry/: stats.py  (+7 more)
tests/: conftest.py  constants.py  kernels.py  metrics.py  test_compare.py  test_geometry.py  test_invariances.py  test_kernels.py  test_names.py  test_pairwise.py  test_shape_metrics.py  test_stats.py
(+19 files in other folders)
