[metadata]
name = repsim
version = 0.7.8
description = Representational (Dis)similarity and geometry in PyTorch
author = Richard D. Lange
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
url = https://github.com/wrongu/repsim

[options]
packages = repsim
package_dir = src
install_requires =
    torch
    numpy
    scikit-learn
    scipy
