[metadata]
name = repsim
version = 0.8.3
description = Representational (Dis)similarity and geometry in PyTorch
author = Richard D. Lange
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
url = https://github.com/wrongu/repsim

[options]
package_dir=
    =src
packages=find:
install_requires =
    torch
    numpy
    scikit-learn
    scipy

[options.packages.find]
where=src